--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,61 @@ button:hover {
     width: 83px;
     height: 78px;
 }
+
+.intro-02, .intro-03 {
+    width: 80%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+
+.intro-02 img {
+    width: 90%;
+    height: auto;
+}
+
+.intro-02 h1 {
+    text-align: left;
+    font-size: 2rem;
+    padding: 10px 200px 10px 20px;
+}
+
+.intro-02 p, a {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    text-align: left;
+    margin: 0 !important;
+    padding: 10px 10px 10px 20px;
+    width: 100%;
+}
+
+.intro-02 a {
+    color: hsl(176, 68%, 64%);
+}
+.intro-02 a:hover {
+    color: hsl(0, 0%, 100%);
+}
+
+.container-02 {
+    width: 31%;
+    background-color: hsl(219, 30%, 18%);
+    color: white;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.intro-03 {
+    justify-content: space-between;
+}
+
+.intro-03 p {
+    font-size: 0.8rem;
+    font-weight: 400;
+    line-height: 1rem;
+    text-align: left;
+    padding: 0 30px 0 20px;
+    margin: 40px auto 20px auto;
+    width: 90%;
+}
