--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ header {
 footer {
     background-color: hsl(216, 53%, 9%);
     width: 100%;
+    padding-top: 150px;
 }
 
 .intro {
@@ -183,7 +184,6 @@ button:hover {
     background-color: hsl(219, 30%, 18%);
     color: white;
     margin-top: 50px;
-    margin-bottom: 50px;
 }
 
 .intro-03 {
@@ -198,4 +198,52 @@ button:hover {
     padding: 0 30px 0 20px;
     margin: 40px auto 20px auto;
     width: 90%;
+}
+
+.intro-04 {
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto 20px auto;
+}
+
+.container-04 {
+    width: 60%;
+    margin: 30px auto 10px auto;
+    background-color: hsl(217, 28%, 15%);
+    position: relative;
+    top: 100px;
+    border-radius: 10px;
+}
+
+.container-04 p {
+    font-size: 1rem;
+    font-weight: 400;
+    width: 100%;
+    padding: 10px 50px 10px 50px;
+    margin-top: 0;
+}
+
+.container-04 h1 {
+    font-size: 2rem;
+    line-height: 6rem;
+    margin-bottom: 0;
+}
+
+.container-05 {
+    display: flex;
+}
+
+input {
+    width: 50%;
+    height: 40px;
+    border-radius: 30px;
+    padding-left: 30px;
+    margin: 40px 10px 40px auto ;
+}
+
+.container-05 button {
+    width: 25%;
+    height: 40px;
+    margin: 40px auto 40px 10px ;
 }
