Etapa 05 cocnluida - Finalizada landing page em modo descktop / modo responsivo não iniciado

--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,8 @@ header {
 }
 
 .logo-img {
-    width: 100px
-}
-
-footer {
-    background-color: hsl(216, 53%, 9%);
-    width: 100%;
-    padding-top: 150px;
+    width: 100px;
+    margin-bottom: 40px;
 }
 
 .intro {
@@ -184,6 +179,37 @@ button:hover {
     background-color: hsl(219, 30%, 18%);
     color: white;
     margin-top: 50px;
+    position: relative;
+}
+
+.container-02 img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: 38px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+.min-container{
+    display: flex;
+}
+
+.min-container p, .text-01 p {
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100% !important;
+}
+
+.text, .text-01 {
+    display: flex;
+    flex-direction: column;
+}
+
+
+blockquote {
+    font-size: 0.5rem;
+    font-weight: 400;
 }
 
 .intro-03 {
@@ -212,7 +238,7 @@ button:hover {
     margin: 30px auto 10px auto;
     background-color: hsl(217, 28%, 15%);
     position: relative;
-    top: 100px;
+    top: 130px;
     border-radius: 10px;
 }
 
@@ -246,4 +272,10 @@ input {
     width: 25%;
     height: 40px;
     margin: 40px auto 40px 10px ;
+}
+
+.quotes img {
+    position: relative;
+    bottom: 70px;
+    left: 55px;
 }
